# beacon-aid-relief

./: .gitignore  Anchor.toml  README.md  package.json
.github/workflows/: solana-ci.yml
app/: eslint.config.mjs  middleware.ts  package.json  tailwind.config.ts  tsconfig.json
app/src/app/: globals.css  layout.tsx
app/src/app/(dashboard)/: layout.tsx
app/src/app/(website)/: layout.tsx  page.tsx
app/src/components/: ActionListButton.tsx  CampaignForm.tsx  CampaignGrid.tsx  DashboardLayout.tsx  DonateButton.tsx  DonateModal.tsx  Footer.tsx  Navigation.tsx  WalletButton.tsx  providers.tsx  wallet-button.module.css
app/src/components/analytics/: AnalyticsSkeleton.tsx  CampaignCategoriesChart.tsx  DonorRetentionChart.tsx  GeographicDistributionChart.tsx  MonthlyTrendsChart.tsx
app/src/components/auth/: SignInForm.tsx  SignUpForm.tsx
app/src/components/campaign/: BasicInfoFields.tsx  CampaignCard.tsx  CampaignGrid.tsx  DatePickerField.tsx  DonationHistory.tsx  LocationFields.tsx
app/src/components/dashboard/: CampaignsTable.tsx  DashboardSkeleton.tsx  DonationsChart.tsx  StatsCards.tsx
app/src/components/form/: FormFieldWrapper.tsx
app/src/config/: index.ts
app/src/contexts/: AuthContext.tsx
app/src/hooks/: useAnalytics.ts  useCampaigns.ts  useDashboardData.ts
app/src/lib/: utils.ts  wallet-context.tsx
app/src/services/: campaign.ts
app/src/types/: analytics.ts  campaign.ts
app/supabase/: config.toml
programs/beacon-aid-relief/: Cargo.toml
programs/beacon-aid-relief/src/: lib.rs
tests/: beacon-aid-relief.ts
(+29 files in other folders)
