[package]
name = "beacon-aid-relief"
version = "0.1.0"
description = "Beacon aid relief Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "beacon_aid_relief"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
